--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    repositories {
+        maven {
+            url "https://jitpack.io"
+        }
+    }
 }
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -34,6 +42,10 @@ dependencies {
     compile 'com.android.support:palette-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.6'
+
+    compile('com.github.ozodrukh:CircularReveal:2.0.1@aar') {
+        transitive = true;
+    }
 
 
     testCompile 'junit:junit:4.12'
